--- a/index.css
+++ b/index.css
@@ -1,4 +1,26 @@
-.header{
+@import "tailwindcss";
+
+
+@layer components {
+    .btn-primary {
+        @apply rounded-sm border-[1px] border-pink-700  p-1 mr-1.5 bg-amber-100 cursor-pointer;
+    }
+}
+
+@layer base{
+    h1{
+        @apply text-3xl
+    }
+
+    h2{
+        @apply text-2xl
+    }
+}
+
+/* .main{
+    background-color: orange;
+} */
+/* .header{
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
@@ -55,7 +77,7 @@
     flex-wrap: wrap;
 }
 /* shimmer ui */
-.shimmer-container{
+/* .shimmer-container{
     display: flex;
     flex-wrap: wrap;
 }
@@ -70,7 +92,7 @@
 
 /* button login*/
 
-.login-btn{
+/* .login-btn{
     margin-right: 10px;
     height: 30px;
     margin-top: 10px;
@@ -79,10 +101,10 @@
 
 .filter-btn{
     margin-left: 3px;
-}
+} */
 
 
-.user-data{
+/* .user-data{
     padding: 5px;
     border: 1px solid black;
-}
+} */
